syntax = "proto2";
package apb;

message EmptyMsg{}

message TeleopRequest
{
	oneof type
	{
		EmptyMsg getOsStats = 1;
	}
}

message TeleopResponse
{
	oneof type
	{
		EmptyMsg osStats = 1;
	}
}